--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "reactjs-popup": "^2.0.4",
     "spotify-web-api-js": "^1.5.1",
     "web-vitals": "^1.0.1"
   },
