--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "pure-react-carousel": "^1.27.6",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-responsive-carousel": "^3.2.13",
     "react-scripts": "4.0.3",
     "reactjs-popup": "^2.0.4",
     "spotify-web-api-js": "^1.5.1",
