--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.1.10",
     "pure-react-carousel": "^1.27.6",
     "react": "^17.0.1",
+    "react-burger-menu": "^3.0.4",
     "react-dom": "^17.0.1",
     "react-responsive-carousel": "^3.2.13",
     "react-scripts": "4.0.3",
